--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -358,7 +358,7 @@ li.disabled i {
     opacity: 0.2;
 }
 
-.w, .center-category {
+.w, .center-category, .center-course {
     padding: 16px;
     position: absolute;
     border: 2px solid #3C8DBC;
@@ -371,6 +371,20 @@ li.disabled i {
     text-align: center;
     text-transform: capitalize;
     font-weight: 500;
+}
+
+.center-course{
+    background-color: #3C8DBC;
+    color:white;
+    min-width: 160px;
+    border-bottom: 2px solid #3C8DBC;
+}
+
+.dropdown-course{
+    width:100%;
+    font-size:12px;
+    border: 1px solid #e3e3e3;
+    color:#333;
 }
 
 .center-category {
@@ -391,7 +405,7 @@ li.disabled i {
 
 [data-shape=Rectangle] {
     width: auto;
-    min-width: 150px;
+    min-width: 160px;
     height: auto;
 }
 
@@ -409,7 +423,8 @@ li.disabled i {
     color: #777;
 }
 
-ul.dropdown-menu.category {
+ul.dropdown-menu.category,
+ul.dropdown-menu.course{
     z-index: 10;
 }
 
@@ -462,9 +477,20 @@ ul.dropdown-menu.category {
     overflow: hidden;
 }
 
+#courseTabs .tree-container{
+    left: 80px;
+    top:7px;
+}
+
 .control {
     position: fixed;
     top: 120px;
+    left: 20px;
+    z-index: 4;
+}
+
+.course-control {
+    position: relative;
     left: 20px;
     z-index: 4;
 }
