can add subtopic until lv 3

--- a/views/admin-lte/catalogs/course.map.ejs
+++ b/views/admin-lte/catalogs/course.map.ejs
@@ -1,14 +1,16 @@
 <script type="text/ng-template" id="tree_item_renderer.html">
-    <div class="w" id="{{data.slug}}" data-from-root-x="{{data.positionFromRoot.x}}"
+    <div class="w" id="t{{data._id}}" data-from-root-x="{{data.positionFromRoot.x}}"
          data-from-root-y="{{data.positionFromRoot.y}}" data-shape="Rectangle" data-toggle="dropdown"
          data-hover="dropdown">
 
         {{data.name}}
 
-        <ul class="dropdown-menu box box-primary category">
-            <li>
-                <button class="btn btn-block btn-primary btn-sm" ng-click="">Add A Sub Topic</button>
-                <button class="btn btn-block btn-primary btn-sm" ng-click="">Add A Content Node</button>
+        <ul class="dropdown-menu dropdown-course">
+            <li ng-show="data.type=='subTopic'">
+                <a class="" data-toggle="modal" data-target="#addSubTopicModal" ng-click="setMode('add', 'subTopic', data)">Add A Sub Topic</a>
+            </li>
+            <li ng-show="data.type=='subTopic'">
+                <a class="" data-toggle="modal" data-target="#addContentNodeModal" ng-click="setMode('add', 'contentNode', data)">Add A Content Node</a>
             </li>
         </ul>
 
@@ -37,9 +39,9 @@
                 <li>
                     <a class="" data-toggle="modal" data-target="#addSubTopicModal" ng-click="setMode('add', 'subTopic')">Add A Sub Topic</a>
                 </li>
-                <li>
-                    <a class=""data-toggle="modal" data-target="#addContentNodeModal" ng-click="setMode('add', 'contentNode')">Add A Content Node</a>
-                </li>
+                <!--<li>
+                    <a class="" data-toggle="modal" data-target="#addContentNodeModal" ng-click="setMode('add', 'contentNode')">Add A Content Node</a>
+                </li>-->
             </ul>
         </div>
 
