--- a/views/admin-lte/catalogs/addSubTopicModal.ejs
+++ b/views/admin-lte/catalogs/addSubTopicModal.ejs
@@ -2,7 +2,7 @@
 <section class="content" ng-controller="NodeEditController" >
     <div class="row row-centered">
         <div class="col-xs-12 col-md-5 col-centered">
-            <div class="box no-border"ng-init="init()">
+            <div class="box no-border" ng-init="init()">
                 <div class="box-header with-border">
                     <h3 class="box-title">{{nodeModaltitle}}</h3>
 
@@ -16,15 +16,15 @@
                     <form class="" role="form" ng-submit="saveNode()">
                         <fieldset>
                             <div class="control-group">
-                                <label class="control-label" for="course">{{currentNodeAction.typeText}} name</label>
+                                <label class="control-label" for="name">{{currentNodeAction.typeText}} name</label>
                                 <p class="help-block">{{currentNodeAction.typeText}} name can contain any letters or numbers</p>
                                 <div class="controls">
-                                    <input type="text" id="course" name="course" placeholder="" class="form-control"
+                                    <input type="text" id="name" name="name" placeholder="" class="form-control"
                                            ng-model="formData.name">
                                 </div>
                             </div>
 
-                            <div class="control-group">
+                            <!--<div class="control-group">
                                 <p></p>
                                 <label class="control-label" for="course">Description</label>
                                 <p class="help-block">Description about this {{currentNodeAction.typeText}}</p>
@@ -33,7 +33,7 @@
                                              class="form-control" ng-model="formData.description">
                                 </textarea>
                                 </div>
-                            </div>
+                            </div>-->
 
                             <div class="control-group">
                                 <p class="help-block"></p>
@@ -46,7 +46,8 @@
                                     <div class="controls">
                                         <button class="btn btn-md btn-primary">Save</button>
                                         <button type="button" class="btn btn-md btn-primary"
-                                                data-dismiss="modal" aria-label="Close" ng-click="cancel()">
+                                                data-dismiss="modal" aria-label="Close"
+                                                ng-click="cancel()">
                                             <span aria-hidden="true">Cancel</span>
                                         </button>
                                     </div>
