--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -115,6 +115,12 @@
                           </form>
 
                         </div>
+                        <div ng-controller="CommentListController">
+                            <div ng-show="comments">
+                              {{comments}}
+                            </div>
+                        </div>
+
 
                         <div>
                         </div>
