--- a/views/admin-lte/catalogs/courses.ejs
+++ b/views/admin-lte/catalogs/courses.ejs
@@ -40,7 +40,7 @@
                     <!--{{category}}-->
 
                     <div class="col-sm-6 col-lg-3" ng-repeat="c in courses">
-                        <div class="form_hover">
+                        <div class="form_hover" ng-mouseover="getCourseAnalytics(c._id)">
                             <div class="box box-primary peekCourse">
                                 <div class="box-header with-border">
                                     <a href="/course/{{c.slug}}/#/cid/{{c._id}}" class="box-title">{{c.name}}</a>
@@ -58,8 +58,7 @@
                                         <a href="/course/{{c.slug}}/#/cid/{{c._id}}" class="box-title">{{c.name}}</a>
                                     </div>
                                     <div class="box-body">
-                                        <div class="form-group">
-                                            Started Date: <b>{{c.dateAdded | date:'dd.MM.yyyy @ H:mm'}}</b>
+                                        <div class="courses-analytics" ng-bind-html="widgets[c._id]">
                                         </div>
                                         <a class="btn btn-primary" href="/course/{{c.slug}}/#/cid/{{c._id}}"><i
                                                 class=""></i> Go to course</a>
