enable close button, and restructure widget html element

--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -630,3 +630,6 @@ ul.dropdown-menu.course{
     font-size: 27px;
     margin-top: 10px;
 }
+.grid-stack>.grid-stack-item>.grid-stack-item-content{
+    background: white;
+}
