refactor view on course detail and node detail

--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -550,6 +550,9 @@ ul.dropdown-menu.course{
 .blue {
     background: #3C8DBC !important;
 }
+.red {
+    background: #db4865 !important;
+}
 
 .action-header {
     padding: 7px;
