--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -12,7 +12,9 @@
     <div class="navbar-custom-menu" ng-show="currentTab=='node-map'" ng-include
          src="'actionBar-node-map'"></div>
     <div class="navbar-custom-menu" ng-show="currentTab=='node-update'" ng-include
-         src="'actionBar-node-map'"></div>
+         src="'actionBar-node-update'"></div>
+    <div class="navbar-custom-menu" ng-show="currentTab=='node-external-resources'" ng-include
+         src="'actionBar-node-external-resources'"></div>
 
 </section>
 
@@ -25,30 +27,36 @@
             <div class="tabbable tabs-left">
                 <ul class="nav nav-tabs tabs-hide hidden-xs">
                     <li class="active">
-                        <a href="#/cid/{{course._id}}?preview"
+                        <a href="#/cid/{{course._id}}/nid/{{nodeId}}?preview"
                            data-toggle="tab" data-target="#preview">
                             <i class="ionicons ion-ios-home-outline"></i><br>
                             <span>Home</span></a></li>
 
                     <li ng-show="enrolled || isOwner">
-                        <a href="#/cid/{{course._id}}?map"
+                        <a href="#/cid/{{course._id}}/nid/{{nodeId}}?map"
                            data-toggle="tab" data-target="#map">
                             <i class="ionicons ion-map"></i>
                             <span>Video Map</span></a></li>
+
+                    <li ng-show="enrolled || isOwner">
+                        <a href="#/cid/{{course._id}}/nid/{{nodeId}}?external-resources"
+                           data-toggle="tab" data-target="#external-resources">
+                            <i class="ionicons ion-link"></i>
+                            <span>External Resources</span></a></li>
+
                     <li ng-show="enrolled || isOwner">
                         <a href="#/cid/{{course._id}}/nid/{{nodeId}}?updates" ng-show="user"
-                           data-toggle="tab" data-target="#updates"
-                                >
+                           data-toggle="tab" data-target="#updates">
                             <i class="ionicons ion-ios-time-outline"></i><br>
                             <span>Updates</span></a></li>
 
                     <li ng-show="enrolled || isOwner">
                         <a href="#/cid/{{course._id}}/nid/{{nodeId}}?analytics" ng-show="user"
-                           data-toggle="tab" data-target="#analytics"
-                                >
+                           data-toggle="tab" data-target="#analytics">
                             <i class="ionicons ion-stats-bars"></i><br>
                             <span>Analytics</span></a></li>
                 </ul>
+
                 <div class="tab-content">
                     <div class="tab-pane active" id="preview">
                         <div class="col-xs-12 col-md-8">
@@ -76,20 +84,26 @@
 <!-- widgetGallery for course analytics -->
 <div class="row" ng-controller="WidgetGalleryController">
     <div class="modal" id="widgetGalleryAnalytics" tabindex="-1" role="dialog"
-         aria-labelledby="wigets gallery Analytics" aria-hidden="true" ng-init="initData('course-analytics')">
+         aria-labelledby="wigets gallery Analytics" aria-hidden="true" ng-init="initData('node-analytics')">
         <div ng-include="'/widgets/gallery'"></div>
+    </div>
+</div>
+
+<!-- addBookmark modal -->
+<div class="row" >
+    <div class="modal" id="addBookmarkModal" tabindex="-1" role="dialog"
+         aria-labelledby="add Bookmark Modal" aria-hidden="true">
+        add bookmark
     </div>
 </div>
 
 <!-- /.modal contents -->
 
-<% include actionBarNode %>
-
 <script type="text/ng-template" id="node-analytics.html">
     <!-- analytics-->
-    <div id="course-analytics-widgets" class="grid-stack col-xs-12 col-md-3"
+    <div id="node-analytics-widgets" class="grid-stack col-xs-12 col-md-3"
          ng-controller="widgetController"
-         ng-init="location='course-analytics'">
+         ng-init="location='node-analytics'">
 
         <div class="grid-stack-item"
              data-gs-x="0"
@@ -128,4 +142,17 @@
         </div>
     </div>
     <!-- analytics-->
+</script>
+
+<% include actionBarNode %>
+
+<script>
+    $(document).ready(function () {
+        initiateDraggableGrid(['#node-analytics-widgets']);
+
+        handleTab();
+
+        if (location.hash !== '')
+            $(document).scrollTop(0);
+    });
 </script>
