--- a/views/admin-lte/catalogs/actionBarNode.ejs
+++ b/views/admin-lte/catalogs/actionBarNode.ejs
@@ -25,3 +25,11 @@
     <ul class="">
     </ul>
 </script>
+<script type="text/ng-template" id="actionBar-node-external-resources">
+    <ul class="">
+        <a style="cursor: pointer"
+           data-toggle="modal" data-target="#addBookmark"
+           title="Add External Resource">
+            <i class="ionicons ion-edit"></i> &nbsp; ADD</a>
+    </ul>
+</script>
