buggy version DONT MERGE INTO DEV

--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -69,6 +69,11 @@
                                  <input type="hidden" class="form-control" id="author" name="author" placeholder="author" value= <%=currentUser.username%> >
                                </div>
                              </div>
+                             <div class="control-group">
+                               <div class="controls">
+                                 <input class="form-control" id="tags" name="tags" placeholder="tags">
+                               </div>
+                             </div>
 
                              <div class="control-group">
                                <div class="controls">
@@ -115,7 +120,6 @@
                           </form>
 
                         </div>
-
                         <div>
                         </div>
                       </div>
