able to draw rects on slides

--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -22,15 +22,15 @@
                 <div class="box">
                   <div class="box-body with-border">
                     <h3 class="">Slides</h3>
-                    <div class="pannel box box-primary">
-                      <body tabindex="1">
-                        <div id="viewerContainer">
-    <div id="viewer" class="pdfViewer"></div>
-  </div>
+                    <div class="pannel box box-primary slideWrapper">
+
+                      <div id="viewerContainer">
+                          <div id="viewer" class="pdfViewer"></div>
+                      </div>
+                      <div id="annotationZone"></div>
 
 
                     </div>
-
                   </div>
                 </div>
               </div>
@@ -127,3 +127,4 @@
 <script src="../pdfjs/build/pdf.js"></script>
 <script src="../pdfjs/build/components/pdf_viewer.js"></script>
 <script src="../pdfjs/js/pageviewer.js"></script>
+<script src="js/drawdiv.js"></script>
