--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -2,19 +2,18 @@
     border-style: solid;
     border-color: #ff0000;
 }
-.slide-wrapper{
-
-  widht:100%;
-}
-.slide-image{
-  max-width:100%;
-}
-.annotation-wrapper{
-
-}
-
-
 
 .blueText{
     color: blue;
+}
+
+#annotationZone{
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+
+#viewerContainer{
 }
